--- a/styles.css
+++ b/styles.css
@@ -97,50 +97,62 @@ body {
 }
 
 .lift {
-    width: 40px;
-    height: 60px;
+    width: 60px;
+    height: 80px;
     background-color: #3498db;
     margin-right: 20px;
     position: absolute;
     transition: transform 2s ease-in-out;
     z-index: 1;
+    overflow: hidden;
 }
 
-.lift::before,
-.lift::after {
-    content: '';
+.lift-display {
     position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    padding: 2px 5px;
+    border-radius: 3px;
+    font-size: 12px;
+    z-index: 2;
+}
+
+.lift-doors {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.lift-door {
     width: 50%;
     height: 100%;
     background-color: #2980b9;
     transition: transform 2.5s ease-in-out;
-    -webkit-transition: transform 2.5s ease-in-out;
-    -moz-transition: transform 2.5s ease-in-out;
-    -ms-transition: transform 2.5s ease-in-out;
-    -o-transition: transform 2.5s ease-in-out;
 }
 
-.lift::before {
-    left: 0;
+.lift-door-left {
+    transform-origin: left;
 }
 
-.lift::after {
-    right: 0;
+.lift-door-right {
+    transform-origin: right;
 }
 
-.lift.doors-opening::before {
+.lift.doors-opening .lift-door-left {
     transform: translateX(-100%);
 }
 
-.lift.doors-opening::after {
+.lift.doors-opening .lift-door-right {
     transform: translateX(100%);
 }
 
-.lift.doors-closing::before {
-    transform: translateX(0);
-}
-
-.lift.doors-closing::after {
+.lift.doors-closing .lift-door-left,
+.lift.doors-closing .lift-door-right {
     transform: translateX(0);
 }
 
