--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     border: 1px solid #ccc;
     padding: 20px;
     background-color: white;
-    overflow: hidden;
+    overflow-x: auto;
 }
 
 #floors-container {
@@ -40,16 +40,18 @@ body {
 
 .floor {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     height: 80px;
     position: relative;
+    z-index: 2;
 }
 
 .floor-buttons {
     display: flex;
     flex-direction: column;
-    margin-right: 10px;
-    width: 60px;
+    align-items: center;
+    margin-right: 20px;
+    z-index: 2;
 }
 
 .floor-button {
@@ -59,6 +61,10 @@ body {
     border: none;
     color: white;
     cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .up-button {
@@ -69,20 +75,17 @@ body {
     background-color: #FFA500;
 }
 
-.floor-line {
-    flex-grow: 1;
-    height: 2px;
-    background-color: #000;
-    position: relative;
-    z-index: 2;
-    margin-bottom: 10px;
-}
-
 .floor-number {
-    font-weight: bold;
     position: absolute;
-    right: 0;
-    bottom: 12px;
+    left: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    padding: 2px 5px;
+    border-radius: 3px;
+    font-size: 12px;
+    z-index: 2;
 }
 
 #lifts-container {
@@ -92,8 +95,9 @@ body {
     height: calc(100% - 40px);
     width: calc(100% - 100px);
     z-index: 1;
-    display: flex-center;
+    display: flex;
     justify-content: space-between;
+    align-items: flex-end;
 }
 
 .lift {
@@ -104,19 +108,16 @@ body {
     position: absolute;
     transition: transform 2s ease-in-out;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    color: white;
+    font-size: 10px;
+    text-align: center;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     overflow: hidden;
-}
-
-.lift-display {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    background-color: #2c3e50;
-    color: #ecf0f1;
-    padding: 2px 5px;
-    border-radius: 3px;
-    font-size: 12px;
-    z-index: 2;
 }
 
 .lift-doors {
