--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,9 @@ body {
     height: 80px;
     position: relative;
     z-index: 2;
+    /* Horizontal separator */
 }
+
 
 .floor-line {
     position: absolute;
@@ -136,6 +138,15 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+}
+
+.lift-floor-display {
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+    position: top;
+    bottom: 10px;
+    z-index: 3;
 }
 
 .lift-door {
